# layup

./: .copier-answers.yml  .gitignore  .gitmodules  .pre-commit-config.yaml  .readthedocs.yml  2002FJ36_obs.csv  2002fj36_orbitfit_output.csv  2002fj36_predictions.csv  2014WV508_obs.csv  2014wv508_orbitfit.csv  CMakeLists.txt  LICENSE  MPC_rubin_TNOs_27Feb2026.csv  README.md  converted_output.csv  create_lib_links.sh  holman_data_working.csv  orbitfit_rubin_TNOs.csv  orbitfit_rubin_TNOs_BKEP.csv.csv  orbitfit_rubin_TNOs_flagged.csv  orbitfit_test_TNO.csv  output.csv  pyproject.toml  test.ipynb  test.predict.csv  test_for_herget.csv  test_orbitfit.ipynb
.github/: pull_request_template.md
.github/workflows/: build-documentation.yml  pre-commit-ci.yml  publish-to-pypi.yml  smoke-test.yml  testing-and-coverage.yml
benchmarks/: README.md  run_benchmarks.py
docs/: conf.py  index.rst  notebooks.rst
docs/notebooks/: example_observations.csv  orbit_fitting_api.ipynb  orbit_visualizer_demo.ipynb
docs/pre_executed/: orbit_visualizer_demo.ipynb
examples/: COM_LPCs.csv  Comets.ipynb  planet_orbits.ipynb
src/: main.cpp
src/layup/: __init__.py  _version.py  bk_orbitfit.py  comet.py  constants.py  convert.py  dash_ui.py  iod.py  layup.py  log.py  matplot2d.mplstyle  orbit_maths.py  orbitfit.py  predict.py  unpack.py  visualise.py  visualize.py
src/layup.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt
src/layup/cmdline/: bootstrap.py  comet.py  convert.py  demo.py  init.py  layupargumentparser.py  log.py  orbitfit.py  predict.py  unpack.py  visualize.py
src/layup/config_setups/: Default_config_file.ini  default_config.ini
src/layup/data/: app.css
src/layup/routines/: __init__.py  orbit_conversion_jax.py
src/layup/utilities/: astrometric_uncertainty.py  cli_utilities.py  dataUtilitiesForTests.py  data_processing_utilities.py  data_utilities_for_tests.py  datetime_conversions.py  debiasing.py  fileAccessUtils.py  file_access_utils.py  herget_iod.py  layupConfigs.py  layupCopyConfigs.py  layup_configs.py  layup_copy_configs.py  layup_copy_demo_files.py  layup_demo_commands.py  layup_logging.py  orbit_conversion.py  special_observatories.py
src/layup/utilities/bootstrap_utilties/: create_meta_kernel.py  download_utilities.py
src/layup_cmdline/: bootstrap.py  comet.py  convert.py  demo.py  init.py  log.py  main.py  orbitfit.py  predict.py  unpack.py  visualise.py  visualize.py
src/lib/: detection.cpp  observation.cpp
src/lib/gauss/: gauss.cpp  gauss.h  gauss_main.cpp  gauss_soln.cpp
src/lib/iod/: gauss.cpp
src/lib/orbit_fit/: 03666.txt  MPC_library_small.py  Makefile  assist.h  bk_basis.cpp  bk_basis.h  bk_fit.cpp  bk_iod.cpp  fit_result.cpp  mattodiff.hpp  orbfit_result.cpp  orbit_fit  orbit_fit.cpp  orbit_fit.h  orbit_fit_result.cpp  predict.cpp  predict_result.cpp  process_obs80.py  rebound.h  stumpff.hpp  support_routines.py  tracklets.py
tests/data/: 03666_for_predict.txt  03666_ic.txt  03666_merge.txt  03666_no_bad_dates.txt  03666_no_bad_dates_no_sats.txt  03666_out.txt  03666_tiny.txt  100_random_mpc_ADES.csv  100_random_mpc_ADES_provIDs.csv  100_random_mpc_ADES_provIDs_no_sats.csv  1_random_mpc_ADES_provIDs_micro.csv  1_random_mpc_ADES_provIDs_no_sats_micro.csv  2_random_mpc_ADES_provIDs.csv  3I_ATLAS_ades.csv  4_random_mpc_ADES_provIDs_no_sats.csv  BCOM.csv  BCOM.h5  CART.h5  CART.txt  CART_missing_format.csv  CART_missing_format.h5  CART_mixed_format.csv  CART_mixed_format.h5  CART_with_numeric_objid.csv  CART_with_numeric_objid.h5  COM_LPCs_NEW.csv  COM_LPCs_no_spc.csv  COM_LPCs_subset.csv  KEP.csv  KEP.h5  ades_sample.xml  apophis_2013_radar.json  bernstein_2004_kbos_data_with_sats_occ.csv  bk_scan_truth.json  code_LPCs.csv  code_LPCs_originals.csv  cometed_output.csv  comets_various_positions.csv  csv_pre_header_comments.csv  demo_comet.csv  (+34 more)
tests/data/bk_scan_truth/: centaur_15AU_arc_000.04d.json  centaur_15AU_arc_000.10d.json  centaur_15AU_arc_000.50d.json  centaur_15AU_arc_001.00d.json  centaur_15AU_arc_002.00d.json  centaur_15AU_arc_003.00d.json  centaur_15AU_arc_005.00d.json  centaur_15AU_arc_007.00d.json  centaur_15AU_arc_010.00d.json  centaur_15AU_arc_014.00d.json  centaur_15AU_arc_021.00d.json  centaur_15AU_arc_030.00d.json  centaur_15AU_arc_045.00d.json  centaur_15AU_arc_060.00d.json  centaur_25AU_arc_000.04d.json  centaur_25AU_arc_000.10d.json  centaur_25AU_arc_000.50d.json  centaur_25AU_arc_001.00d.json  centaur_25AU_arc_002.00d.json  centaur_25AU_arc_003.00d.json  centaur_25AU_arc_005.00d.json  centaur_25AU_arc_007.00d.json  centaur_25AU_arc_010.00d.json  centaur_25AU_arc_014.00d.json  centaur_25AU_arc_021.00d.json  centaur_25AU_arc_030.00d.json  centaur_25AU_arc_045.00d.json  centaur_25AU_arc_060.00d.json  classical_42AU_arc_000.04d.json  classical_42AU_arc_000.10d.json  classical_42AU_arc_000.50d.json  classical_42AU_arc_001.00d.json  classical_42AU_arc_002.00d.json  classical_42AU_arc_003.00d.json  classical_42AU_arc_005.00d.json  classical_42AU_arc_007.00d.json  classical_42AU_arc_010.00d.json  classical_42AU_arc_014.00d.json  classical_42AU_arc_021.00d.json  classical_42AU_arc_030.00d.json  (+58 more)
tests/layup/: _bk_guards.py  conftest.py  test_3i_atlas_validation.py  test_ADESXMLReader.py  test_CSVReader.py  test_HDF5Reader.py  test_Obs80Reader.py  test_benchmarks.py  test_bk_basis.py  test_bk_dispatch.py  test_bk_everywhere.py  test_bk_fit.py  test_bk_iod.py  test_chain_smoke.py  test_cli_consistency.py  test_comet.py  test_convert.py  test_cpp_bindings.py  test_cpp_import.py  test_create_meta_kernal.py  test_data_processing_utilities.py  test_datetime_conversions.py  test_debias.py  test_download_utilities.py  test_example_module.py  test_fileAccessUtils.py  test_file_access_utils.py  test_file_output.py  test_file_readers.py  test_gauss.py  test_horizons_cache.py  test_ias15_settings.py  test_incremental_driver.py  test_incremental_fit.py  test_iod_auto.py  test_iod_picker.py  test_layupConfigs.py  test_layupCopyConfigs.py  test_layup_configs.py  test_layup_copy_configs.py  (+22 more)
tools/: bk_engine_sweep.py  bk_iod_sweep.py
(+14 files in other folders)
