
[project]
name = "layup"
license = {file = "LICENSE"}
readme = "README.md"
authors = [
    { name = "Matthew Holman", email = "mholman@cfa.harvard.edu" }
]
classifiers = [
    "Development Status :: 4 - Beta",
    "License :: OSI Approved :: MIT License",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "Operating System :: OS Independent",
    "Programming Language :: Python",
]
dynamic = ["version"]
requires-python = ">=3.11"
dependencies = [
    "numpy",
    "assist",
    "astropy",
    "rebound",
    "pooch",
    "tqdm",
    "sorcha"
]

[project.scripts]
layup = "layup_cmdline.main:main"
layup-visualize = "layup_cmdline.visualize:main"
layup-orbitfit = "layup_cmdline.orbitfit:main"
layup-predict = "layup_cmdline.predict:main"
layup-bootstrap = "layup_cmdline.bootstrap:main"
layup-init = "layup_cmdline.init:main"
layup-convert = "layup_cmdline.convert:main"

[project.urls]
"Source Code" = "https://github.com/Smithsonian/layup"

# On a mac, install optional dependencies with `pip install '.[dev]'` (include the single quotes)
[project.optional-dependencies]
dev = [
    "black==25.1.0", # Used for static linting of files
    "jupyter", # Clears output from Jupyter notebooks
    "pre-commit", # Used to run checks before finalizing a git commit
    "pytest",
    "pytest-cov", # Used to report total code coverage
]

[build-system]
requires = [
    "scikit-build-core>=0.10",
    "pybind11"
]
build-backend = "scikit_build_core.build"

[tool.setuptools_scm]
write_to = "src/layup/_version.py"

[tool.pytest.ini_options]
testpaths = [
    "tests",
]

[tool.black]
line-length = 110
target-version = ["py311"]

[tool.isort]
profile = "black"
line_length = 110

[tool.ruff]
line-length = 110
target-version = "py311"

[tool.ruff.lint]
select = [
    # pycodestyle
    "E",
    "W",
    # Pyflakes
    "F",
    # pep8-naming
    "N",
    # pyupgrade
    "UP",
    # flake8-bugbear
    "B",
    # flake8-simplify
    "SIM",
    # isort
    "I",
    # docstrings
    "D101",
    "D102",
    "D103",
    "D106",
    "D206",
    "D207",
    "D208",
    "D300",
    "D417",
    "D419",
    # Numpy v2.0 compatibility
    "NPY201",
]

ignore = [
    "UP006", # Allow non standard library generics in type hints
    "UP007", # Allow Union in type hints
    "SIM114", # Allow if with same arms
    "B028", # Allow default warning level
    "SIM117", # Allow nested with
    "UP015", # Allow redundant open parameters
    "UP028", # Allow yield in for loop
]

[tool.coverage.run]
omit=["src/layup/_version.py"]
